--- a/examples/project-a/package.json
+++ b/examples/project-a/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "rollup --config rollup.config.mjs",
+    "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rohith R",
