--- a/examples/project-a/package.json
+++ b/examples/project-a/package.json
@@ -16,6 +16,8 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "rollup": "3.23.0"
   }
 }
