--- a/examples/project-a/package.json
+++ b/examples/project-a/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.3",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "rollup": "3.23.0"
   }
 }
