--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@rollup/plugin-virtual": "^3.0.1",
     "@types/estree": "^1.0.1",
     "estree-walker": "^3.0.3",
-    "magic-string": "^0.30.1"
+    "magic-string": "^0.30.1",
+    "semver": "^7.5.4"
   }
 }
