--- a/examples/project-a/package.json
+++ b/examples/project-a/package.json
@@ -16,10 +16,10 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "^1.2.3",
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-replace": "^5.0.2",
+    "@originjs/vite-plugin-federation": "1.2.3",
+    "@rollup/plugin-commonjs": "25.0.3",
+    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-replace": "5.0.2",
     "rollup": "3.23.0"
   }
 }
