--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
   },
   "homepage": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation#readme",
   "dependencies": {
-    "@rollup/plugin-virtual": "^3.0.1",
-    "@types/estree": "^1.0.1",
-    "estree-walker": "^3.0.3",
-    "magic-string": "^0.30.1",
-    "semver": "^7.5.4"
+    "estree-walker": "3.0.3",
+    "magic-string": "0.30.1",
+    "semver": "7.5.4"
   }
 }
