--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx prettier . --write && npx eslint src/ --fix"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,11 @@
     "estree-walker": "3.0.3",
     "magic-string": "0.30.1",
     "semver": "7.5.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.0",
+    "prettier": "3.0.0"
   }
 }
