feat: adding build step

--- a/examples/project-a/package.json
+++ b/examples/project-a/package.json
@@ -20,6 +20,7 @@
     "@rollup/plugin-commonjs": "25.0.3",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
-    "rollup": "3.23.0"
+    "rollup": "3.23.0",
+    "rollup-plugin-module-federation": "file:../../"
   }
 }
