--- a/package.json
+++ b/package.json
@@ -2,9 +2,22 @@
   "name": "rollup-plugin-module-federation",
   "version": "0.0.1",
   "description": "A rollup plugin for module federation",
-  "main": "src/index.js",
+  "main": "./dist/index.js",
   "type": "module",
+  "engines": {
+    "node": ">= 18.0.0"
+  },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
+    "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx prettier . --write && npx eslint . --fix",
     "prepare": "husky install"
@@ -31,10 +44,16 @@
     "semver": "7.5.4"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "25.0.3",
+    "@rollup/plugin-node-resolve": "15.1.0",
+    "@rollup/plugin-replace": "5.0.2",
+    "@rollup/plugin-terser": "^0.4.3",
     "eslint": "^8.46.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.3",
-    "prettier": "3.0.0"
+    "prettier": "3.0.0",
+    "rollup": "3.23.0",
+    "rollup-plugin-copy": "^3.4.0"
   }
 }
