--- a/package.json
+++ b/package.json
@@ -32,6 +32,29 @@
     "rollup",
     "plugin"
   ],
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "main",
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      },
+      {
+        "name": "alpha",
+        "prerelease": true
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github",
+      "@semantic-release/git"
+    ]
+  },
   "author": "Rohith R",
   "license": "MIT",
   "bugs": {
@@ -47,13 +70,15 @@
     "@rollup/plugin-commonjs": "25.0.3",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-terser": "^0.4.3",
-    "eslint": "^8.46.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.0",
-    "husky": "^8.0.3",
+    "@rollup/plugin-terser": "0.4.3",
+    "@semantic-release/git": "10.0.1",
+    "eslint": "8.46.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-import": "2.28.0",
+    "husky": "8.0.3",
     "prettier": "3.0.0",
     "rollup": "3.23.0",
-    "rollup-plugin-copy": "^3.4.0"
+    "rollup-plugin-copy": "3.4.0",
+    "semantic-release": "21.0.7"
   }
 }
