--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -21,6 +21,6 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "rollup": "3.23.0",
-    "rollup-plugin-module-federation": "file:../../"
+    "rollup-plugin-module-federation": "workspace:*"
   }
 }
