--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": ""
   },
   "author": "Rohith R",
   "license": "MIT",
