--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -20,7 +20,8 @@
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx prettier . --write && npx eslint . --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "release": "semantic-release"
   },
   "repository": {
     "type": "git",
