--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,13 @@ jobs:
         with:
           node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
+      - name: 'Setting up pnpm'
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
       - run: pnpm install --frozen-lockfile
       - run: pnpm -r build
       - name: Release
