fix: updating hooks

--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install",
-    "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx prettier . --write && npx eslint . --fix"
+    "lint": "pnpm dlx prettier . --write && pnpm dlx eslint . --fix"
   },
   "devDependencies": {
     "eslint": "8.46.0",
