feat: migarte to pnpm (#4)
* feat: migarte to pnpm

* fix: package renames

* fix: build scripts

* fix: add pnpm installation

* fix: updating hooks

* fix: changing the pre-commit hook

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,5 +13,12 @@ jobs:
         with:
           node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm run build
+      - name: 'Setting up pnpm'
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: |
+            - recursive: true
+              args: [--frozen-lockfile, --strict-peer-dependencies]
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm -r build
