--- a/package.json
+++ b/package.json
@@ -1,59 +1,15 @@
 {
-  "name": "rollup-plugin-module-federation",
-  "version": "1.0.0",
-  "description": "A rollup plugin for module federation",
-  "main": "./dist/index.js",
+  "name": "module-federation-plugins",
   "type": "module",
   "engines": {
     "node": ">= 18.0.0"
   },
-  "exports": {
-    ".": {
-      "import": "./dist/index.js"
-    }
-  },
-  "files": [
-    "dist",
-    "src"
+  "workspaces": [
+    "packages/**"
   ],
-  "scripts": {
-    "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx prettier . --write && npx eslint . --fix",
-    "prepare": "husky install"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MadaraUchiha-314/rollup-plugin-module-federation.git"
-  },
-  "keywords": [
-    "rollup-plugin",
-    "module-federation",
-    "rollup",
-    "plugin"
-  ],
-  "release": {
-    "branches": [
-      "+([0-9])?(.{+([0-9]),x}).x",
-      "main",
-      "next",
-      "next-major",
-      {
-        "name": "beta",
-        "prerelease": true
-      },
-      {
-        "name": "alpha",
-        "prerelease": true
-      }
-    ],
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      "@semantic-release/github",
-      "@semantic-release/git"
-    ]
   },
   "author": "Rohith R",
   "license": "MIT",
@@ -61,24 +17,22 @@
     "url": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation/issues"
   },
   "homepage": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation#readme",
-  "dependencies": {
-    "estree-walker": "3.0.3",
-    "magic-string": "0.30.1",
-    "semver": "7.5.4"
+  "keywords": [
+    "rollup-plugin",
+    "module-federation",
+    "rollup",
+    "plugin"
+  ],
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "prepare": "husky install",
+    "lint": "pnpm dlx prettier . --write && pnpm dlx eslint . --fix"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "25.0.3",
-    "@rollup/plugin-node-resolve": "15.1.0",
-    "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-terser": "0.4.3",
-    "@semantic-release/git": "10.0.1",
     "eslint": "8.46.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.28.0",
     "husky": "8.0.3",
-    "prettier": "3.0.0",
-    "rollup": "3.23.0",
-    "rollup-plugin-copy": "3.4.0",
-    "semantic-release": "21.0.7"
+    "prettier": "3.0.0"
   }
 }
