--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": ""
   },
   "author": "Rohith R",
   "license": "MIT",
@@ -21,6 +22,6 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "rollup": "3.23.0",
-    "rollup-plugin-module-federation": "file:../../"
+    "rollup-plugin-module-federation": "workspace:*"
   }
 }
