--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,12 +13,5 @@ jobs:
         with:
           node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
-      - name: 'Setting up pnpm'
-        uses: pnpm/action-setup@v2
-        with:
-          version: 8
-          run_install: |
-            - recursive: true
-              args: [--frozen-lockfile, --strict-peer-dependencies]
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm -r build
+      - run: npm install --frozen-lockfile
+      - run: npm build --workspaces --if-present
