--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -22,6 +22,6 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "rollup": "3.23.0",
-    "rollup-plugin-module-federation": "workspace:*"
+    "rollup-plugin-module-federation": "*"
   }
 }
