--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "redux": "^4.2.1",
     "uuid": "9.0.0"
   },
   "devDependencies": {
