--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
+    "build": "rm -rf dist/ && webpack && rollup --config rollup.config.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": ""
   },
@@ -14,7 +14,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "redux": "^4.2.1",
+    "redux": "4.2.1",
     "uuid": "9.0.0"
   },
   "devDependencies": {
@@ -23,6 +23,8 @@
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "rollup": "3.23.0",
-    "rollup-plugin-module-federation": "*"
+    "rollup-plugin-module-federation": "*",
+    "webpack": "5.84.1",
+    "webpack-cli": "5.1.1"
   }
 }
