--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -25,6 +25,8 @@
     "rollup": "3.23.0",
     "rollup-plugin-module-federation": "*",
     "webpack": "5.84.1",
-    "webpack-cli": "5.1.1"
+    "webpack-cli": "5.1.1",
+    "rollup-plugin-copy": "3.5.0",
+    "copy-webpack-plugin": "11.0.0"
   }
 }
