--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "npx prettier . --write && npx eslint . --fix"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^6.0.1",
     "eslint": "8.46.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.28.0",
