--- a/packages/examples/project-b/package.json
+++ b/packages/examples/project-b/package.json
@@ -25,6 +25,7 @@
     "webpack": "5.84.1",
     "webpack-cli": "5.1.1",
     "rollup-plugin-copy": "3.5.0",
-    "copy-webpack-plugin": "11.0.0"
+    "copy-webpack-plugin": "11.0.0",
+    "@rollup/plugin-json": "6.0.1"
   }
 }
