--- a/packages/examples/project-c/package.json
+++ b/packages/examples/project-c/package.json
@@ -1,37 +1,26 @@
 {
-  "name": "project-b",
+  "name": "project-c",
   "version": "0.0.1",
-  "description": "A sample project-b to test rollup-federation",
+  "description": "A sample project-a to test rollup-federation for nodejs",
   "main": "src/index.js",
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./dist/rollup/my-remote-entry.js",
-      "node": "./dist/rollup/my-remote-entry.js"
-    }
-  },
   "scripts": {
-    "build": "rm -rf dist/ && webpack && rollup --config rollup.config.mjs",
+    "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": ""
   },
   "author": "Rohith R",
   "license": "MIT",
   "dependencies": {
-    "react": "^18.0.0",
-    "axios": "1.6.2"
+    "project-b": "*"
   },
   "devDependencies": {
-    "@originjs/vite-plugin-federation": "1.2.3",
     "@rollup/plugin-commonjs": "25.0.3",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "rollup": "3.23.0",
     "rollup-plugin-module-federation": "*",
-    "webpack": "5.84.1",
-    "webpack-cli": "5.1.1",
     "rollup-plugin-copy": "3.5.0",
-    "copy-webpack-plugin": "11.0.0",
     "@rollup/plugin-json": "6.0.1"
   }
 }
