--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -64,7 +64,9 @@
   "dependencies": {
     "estree-walker": "3.0.3",
     "magic-string": "0.30.1",
-    "semver": "7.5.4"
+    "semver": "7.5.4",
+    "@module-federation/sdk": "0.0.7",
+    "@module-federation/runtime": "0.0.7"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "25.0.3",
