--- a/packages/examples/project-b/package.json
+++ b/packages/examples/project-b/package.json
@@ -26,6 +26,7 @@
     "webpack-cli": "5.1.1",
     "rollup-plugin-copy": "3.5.0",
     "copy-webpack-plugin": "11.0.0",
-    "@rollup/plugin-json": "6.0.1"
+    "@rollup/plugin-json": "6.0.1",
+    "rollup-plugin-prettier": "4.1.1"
   }
 }
