--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -64,8 +64,10 @@
   "dependencies": {
     "estree-walker": "3.0.3",
     "magic-string": "0.30.1",
-    "semver": "7.5.4"
-  },
+    "semver": "7.5.4",
+    "@module-federation/sdk": "0.0.7",
+    "@module-federation/runtime": "0.0.7"
+   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "25.0.3",
     "@rollup/plugin-node-resolve": "15.1.0",
@@ -79,6 +81,7 @@
     "typescript": "5.2.2",
     "tslib": "2.6.2",
     "@types/estree": "1.0.5",
-    "type-fest": "4.7.0"
+    "type-fest": "4.7.0",
+    "@rollup/plugin-json": "6.1.0"
   }
 }
