--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.28.0",
     "husky": "8.0.3",
-    "prettier": "3.0.0"
+    "prettier": "3.0.0",
+    "http-server": "14.1.1"
   }
 }
