--- a/packages/examples/project-b/package.json
+++ b/packages/examples/project-b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist/ && webpack && rollup --config rollup.config.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "",
     "release": ""
   },
   "author": "Rohith R",
