--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "",
     "release": "semantic-release"
   },
   "repository": {
