tests: some more tests

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "plugin"
   ],
   "scripts": {
+    "start": "npx http-server .",
     "prepare": "husky install",
     "lint": "npx prettier . --write && npx eslint . --fix"
   },
