--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -15,3 +15,4 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: npm install --frozen-lockfile
       - run: npm run build --workspaces --if-present
+      - run: npm run test --workspaces --if-present
