--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -14,5 +14,6 @@ jobs:
           node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
       - run: npm install --frozen-lockfile
+      - run: npx playwright install --with-deps
       - run: npm run build --workspaces --if-present
       - run: npm run test --workspaces --if-present
