--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -13,5 +13,13 @@ jobs:
         with:
           node-version: 18.x
           registry-url: 'https://registry.npmjs.org'
-      - run: npm install --frozen-lockfile
+      - run: npm ci
+      - run: npx playwright install --with-deps
       - run: npm run build --workspaces --if-present
+      - run: npm run test --workspaces --if-present
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: packages/examples/project-a/playwright-report/
+          retention-days: 30
