--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -16,7 +16,8 @@ jobs:
       - run: npm ci
       - run: npx playwright install --with-deps
       - run: npm run build --workspaces --if-present
-      - run: npm run test --workspaces --if-present
+      - run: npm run test:unit --workspaces --if-present
+      - run: npm run test:integration --workspaces --if-present
       - uses: actions/upload-artifact@v3
         if: always()
         with:
