--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "rm -rf dist/ && webpack && rollup --config rollup.config.mjs",
-    "test": "npx playwright test",
+    "test:integration": "npx playwright test",
     "release": ""
   },
   "author": "Rohith R",
