--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test": "",
+    "test:unit": "jest",
     "release": "semantic-release"
   },
   "repository": {
@@ -82,6 +82,12 @@
     "tslib": "2.6.2",
     "@types/estree": "1.0.5",
     "type-fest": "4.7.0",
-    "@rollup/plugin-json": "6.1.0"
+    "@rollup/plugin-json": "6.1.0",
+    "jest": "29.7.0",
+    "@jest/globals": "29.7.0",
+    "babel-jest": "29.7.0",
+    "@babel/core": "7.23.9",
+    "@babel/preset-env": "7.23.9",
+    "@babel/preset-typescript": "7.23.3"
   }
 }
