--- a/packages/examples/project-b/package.json
+++ b/packages/examples/project-b/package.json
@@ -2,30 +2,30 @@
   "name": "project-b",
   "version": "0.0.1",
   "description": "A sample project-b to test rollup-federation",
-  "main": "src/index.js",
+  "license": "MIT",
+  "author": "Rohith R",
   "type": "module",
+  "main": "src/index.js",
   "scripts": {
     "build": "rm -rf dist/ && webpack && rollup --config rollup.config.mjs",
     "release": ""
   },
-  "author": "Rohith R",
-  "license": "MIT",
   "dependencies": {
-    "react": "^18.0.0",
-    "axios": "1.6.2"
+    "axios": "1.6.2",
+    "react": "^18.0.0"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "1.2.3",
     "@rollup/plugin-commonjs": "25.0.3",
+    "@rollup/plugin-json": "6.0.1",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
-    "rollup": "3.23.0",
-    "rollup-plugin-module-federation": "*",
-    "webpack": "5.84.1",
-    "webpack-cli": "5.1.1",
-    "rollup-plugin-copy": "3.5.0",
     "copy-webpack-plugin": "11.0.0",
-    "@rollup/plugin-json": "6.0.1",
-    "rollup-plugin-prettier": "4.1.1"
+    "rollup": "3.23.0",
+    "rollup-plugin-copy": "3.5.0",
+    "rollup-plugin-module-federation": "*",
+    "rollup-plugin-prettier": "4.1.1",
+    "webpack": "5.84.1",
+    "webpack-cli": "5.1.1"
   }
 }
