--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
     "release": "semantic-release",
-    "test:unit": "vitest run"
+    "test:unit": "vitest run --coverage"
   },
   "release": {
     "branches": [
@@ -73,6 +73,7 @@
     "@rollup/plugin-terser": "0.4.3",
     "@rollup/plugin-typescript": "11.1.5",
     "@semantic-release/git": "10.0.1",
+    "@vitest/coverage-v8": "1.3.1",
     "rollup": "3.23.0",
     "rollup-plugin-copy": "3.4.0",
     "semantic-release": "21.0.7",
