--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -2,16 +2,29 @@
   "name": "rollup-plugin-module-federation",
   "version": "1.10.0",
   "description": "A rollup plugin for module federation",
-  "main": "./dist/index.js",
-  "type": "module",
-  "engines": {
-    "node": ">= 18.0.0"
+  "keywords": [
+    "rollup-plugin",
+    "module-federation",
+    "rollup",
+    "plugin"
+  ],
+  "homepage": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation#readme",
+  "bugs": {
+    "url": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation/issues"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MadaraUchiha-314/rollup-plugin-module-federation.git"
+  },
+  "license": "MIT",
+  "author": "Rohith R",
+  "type": "module",
   "exports": {
     ".": {
       "import": "./dist/index.js"
     }
   },
+  "main": "./dist/index.js",
   "files": [
     "dist",
     "src",
@@ -19,19 +32,9 @@
   ],
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.mjs",
-    "test:unit": "jest",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "test:unit": "vitest run --coverage"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MadaraUchiha-314/rollup-plugin-module-federation.git"
-  },
-  "keywords": [
-    "rollup-plugin",
-    "module-federation",
-    "rollup",
-    "plugin"
-  ],
   "release": {
     "branches": [
       "+([0-9])?(.{+([0-9]),x}).x",
@@ -55,39 +58,31 @@
       "@semantic-release/git"
     ]
   },
-  "author": "Rohith R",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation/issues"
-  },
-  "homepage": "https://github.com/MadaraUchiha-314/rollup-plugin-module-federation#readme",
   "dependencies": {
+    "@module-federation/runtime": "0.0.10",
+    "@module-federation/sdk": "0.0.10",
     "estree-walker": "3.0.3",
     "magic-string": "0.30.1",
-    "semver": "7.5.4",
-    "@module-federation/sdk": "0.0.10",
-    "@module-federation/runtime": "0.0.10"
+    "semver": "7.5.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "25.0.3",
+    "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
     "@rollup/plugin-terser": "0.4.3",
+    "@rollup/plugin-typescript": "11.1.5",
     "@semantic-release/git": "10.0.1",
+    "@vitest/coverage-v8": "1.3.1",
     "rollup": "3.23.0",
     "rollup-plugin-copy": "3.4.0",
     "semantic-release": "21.0.7",
-    "@rollup/plugin-typescript": "11.1.5",
-    "typescript": "5.2.2",
     "tslib": "2.6.2",
-    "@types/estree": "1.0.5",
     "type-fest": "4.7.0",
-    "@rollup/plugin-json": "6.1.0",
-    "jest": "29.7.0",
-    "@jest/globals": "29.7.0",
-    "babel-jest": "29.7.0",
-    "@babel/core": "7.23.9",
-    "@babel/preset-env": "7.23.9",
-    "@babel/preset-typescript": "7.23.3"
+    "typescript": "5.2.2",
+    "vitest": "1.3.1"
+  },
+  "engines": {
+    "node": ">= 18.0.0"
   }
 }
