fix: adding CJS output

--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -21,7 +21,8 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.cjs"
     }
   },
   "main": "./dist/index.js",
