--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -61,8 +61,8 @@
     ]
   },
   "dependencies": {
-    "@module-federation/runtime": "0.0.10",
-    "@module-federation/sdk": "0.0.10",
+    "@module-federation/runtime": "0.1.15",
+    "@module-federation/sdk": "0.1.15",
     "estree-walker": "3.0.3",
     "magic-string": "0.30.1",
     "semver": "7.5.4"
@@ -82,7 +82,8 @@
     "tslib": "2.6.2",
     "type-fest": "4.7.0",
     "typescript": "5.2.2",
-    "vitest": "1.3.1"
+    "vitest": "1.3.1",
+    "@types/estree": "1.0.5"
   },
   "engines": {
     "node": ">= 18.0.0"
