--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -37,6 +37,7 @@
     "webpack": "5.84.1",
     "webpack-cli": "5.1.1",
     "@rspack/cli": "0.7.0",
-    "@rspack/core": "0.7.0"
+    "@rspack/core": "0.7.0",
+    "@module-federation/enhanced": "0.1.18"
   }
 }
