--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -25,6 +25,7 @@
     "@originjs/vite-plugin-federation": "1.2.3",
     "@playwright/test": "^1.41.2",
     "@rollup/plugin-commonjs": "25.0.3",
+    "rollup-plugin-brotli": "3.1.0",
     "@rollup/plugin-json": "6.0.1",
     "@rollup/plugin-node-resolve": "15.1.0",
     "@rollup/plugin-replace": "5.0.2",
@@ -36,7 +37,8 @@
     "rollup-plugin-module-federation": "*",
     "webpack": "5.84.1",
     "webpack-cli": "5.1.1",
-    "@rspack/cli": "0.5.9",
-    "@rspack/core": "0.5.9"
+    "@rspack/cli": "0.7.3",
+    "@rspack/core": "0.7.3",
+    "@module-federation/enhanced": "0.1.21"
   }
 }
