--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -37,8 +37,12 @@
     "rollup-plugin-module-federation": "*",
     "webpack": "5.84.1",
     "webpack-cli": "5.1.1",
-    "@rspack/cli": "0.7.3",
-    "@rspack/core": "0.7.3",
+    "@rspack/cli": "0.7.5",
+    "@rspack/core": "0.7.5",
     "@module-federation/enhanced": "0.2.4"
+  },
+  "resolutions": {
+    "@module-federation/runtime": "0.2.4",
+    "@module-federation/sdk": "0.2.4"
   }
 }
