--- a/packages/examples/project-a/package.json
+++ b/packages/examples/project-a/package.json
@@ -19,7 +19,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "redux": "4.2.1",
-    "uuid": "9.0.0"
+    "uuid": "9.0.0",
+    "@module-federation/runtime": "0.2.4"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "1.2.3",
