--- a/packages/rollup-plugin-module-federation/package.json
+++ b/packages/rollup-plugin-module-federation/package.json
@@ -61,11 +61,13 @@
     ]
   },
   "dependencies": {
-    "@module-federation/runtime": "0.2.4",
     "@module-federation/sdk": "0.2.4",
     "estree-walker": "3.0.3",
     "magic-string": "0.30.1",
     "semver": "7.5.4"
+  },
+  "peerDependencies": {
+    "@module-federation/runtime": "^0.2.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "25.0.3",
@@ -76,6 +78,7 @@
     "@rollup/plugin-typescript": "11.1.5",
     "@semantic-release/git": "10.0.1",
     "@vitest/coverage-v8": "1.3.1",
+    "@module-federation/runtime": "0.2.4",
     "rollup": "3.23.0",
     "rollup-plugin-copy": "3.4.0",
     "semantic-release": "21.0.7",
